--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
   <button type="button" onclick="get()"> Get Challenge</button>
   
   <h3 id="title"></h3>
-  <p id="description"></p>
+  <p id="description" style="max-width:220pt"></p>
 </body>
 </html>
